Layout changes, custom validation messages

--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -9,3 +9,11 @@ body > .container {
 .jumbotron .btn {
     margin: 20px 10px 0 0;   
 }
+
+form {
+    margin: 30px 0;   
+}
+
+.alert-danger {
+    margin: 20px 0;   
+}
